No corre nada, refactoreo terminado