@@ -1,17 +1,18 @@
 package edu.fiuba.algo3.testEntrega2.Pregunta;
 
+import edu.fiuba.algo3.modelo.Respuestas.Respuestas;
+import edu.fiuba.algo3.modelo.Respuestas.RespuestasConcretas;
+import edu.fiuba.algo3.modelo.Respuestas.respuesta.RespuestaConcreta;
 import edu.fiuba.algo3.modelo.modificadores.Modificadores;
-import edu.fiuba.algo3.modelo.opciones.Grupos;
+import edu.fiuba.algo3.modelo.opciones.GruposMock;
 import edu.fiuba.algo3.modelo.opciones.Opciones;
 import edu.fiuba.algo3.modelo.pregunta.Pregunta;
 import edu.fiuba.algo3.modelo.puntaje.Clasica;
 import edu.fiuba.algo3.modelo.Respuestas.respuesta.Respuesta;
-import edu.fiuba.algo3.modelo.opciones.opcion.estado.Correcta;
 import edu.fiuba.algo3.modelo.opciones.opcion.estado.Incorrecta;
 
 import edu.fiuba.algo3.modelo.jugador.Jugador;
 import edu.fiuba.algo3.modelo.modificadores.ModificadorPuntaje.ModificadorPuntaje;
-import edu.fiuba.algo3.modelo.modificadores.ModificadorPuntaje.NuloPuntaje;
 import edu.fiuba.algo3.modelo.opciones.opcion.Grupo;
 import edu.fiuba.algo3.modelo.opciones.opcion.Opcion;
 
@@ -19,6 +20,7 @@ import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
 
+import edu.fiuba.algo3.testEntrega2.mocks.GruposMock;
 import org.junit.jupiter.api.BeforeAll;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
@@ -36,6 +38,8 @@ public class GroupChoiceTest {
     private static Clasica clasica;
     private ModificadorPuntaje modificadorPuntaje;
     private List<ModificadorPuntaje> modificadores;
+    private GruposMock opcionesCorrectas;
+    private RespuestasConcretas respuestas;
 
     @BeforeAll
     public static void setUpClass() {
@@ -56,11 +60,10 @@ public class GroupChoiceTest {
         List<List<String>> miembrosPorGrupos=new ArrayList<>();
         miembrosPorGrupos.add(miembrosGrupo1);
         miembrosPorGrupos.add(miembrosGrupo2);
-        Opciones opcionesCorrectas=new Grupos(grupos,miembrosPorGrupos);
+        opcionesCorrectas=new GruposMock(grupos,miembrosPorGrupos);
 
-        opcion1CorrectaSinValidar = new Grupo("Gato", "Mamifero", new Incorrecta());
-        opcion2CorrectaSinValidar = new Grupo("Perro", "Mamifero", new Incorrecta());
-        opcion3CorrectaSinValidar = new Grupo("Tiburon", "Pez", new Incorrecta());
+
+        respuestas= new RespuestasConcretas();
 
 
     }
@@ -69,19 +72,15 @@ public class GroupChoiceTest {
     @Test
     public void test01GroupChoiceAsignaPuntajeCorrectoAJugadorQueRespondeCorrectamente(){
         //Arrange
-        List<Opcion> opcionesPregunta = Arrays.asList(opcion1Correcta, opcion2Correcta, opcion3Correcta);
 
         Pregunta pregunta = new GroupChoice(
                 "Poner las siguientes preguntas en su grupo correspondiente",
-                opcionesPregunta,
+                opcionesCorrectas,
                 clasica,
                 "Animales"
         );
 
-
-        Respuesta respuesta2 = jugador2.responder(Arrays.asList(opcion1CorrectaSinValidar, opcion2CorrectaSinValidar, opcion3CorrectaSinValidar),opcionesPregunta, modificadorPuntaje);
-        List<Respuesta> respuestas = new ArrayList<>();
-        respuestas.add(respuesta2);
+        respuestas.agregar(opcionesCorrectas,jugador1, modificadorPuntaje);
 
         //Act
         pregunta.asignarPuntajes(respuestas);
@@ -93,18 +92,17 @@ public class GroupChoiceTest {
     @Test
     public void test02Asigna0PuntosAJugadorQueRespondeConUnaIncorrecta() {
         //Arrange
-        List<Opcion> opcionesPregunta = Arrays.asList(opcion1Correcta, opcion2Correcta, opcion3Correcta);
 
         Pregunta pregunta = new GroupChoice(
                 "Poner las siguientes preguntas en su grupo correspondiente",
-                opcionesPregunta,
+                opcionesCorrectas,
                 clasica,
                 "Animales"
         );
-        Respuesta respuesta1 = jugador1.responder(Arrays.asList(opcion2Incorrecta), opcionesPregunta, modificadorPuntaje);
 
-        List<Respuesta> respuestas = new ArrayList<>();
-        respuestas.add(respuesta1);
+        GruposMock opcionesJugador = opcionesCorrectas.crearCopiaMock(miembrosGrupo2, List.of(""));
+        respuestas.agregar(opcionesJugador,jugador1, modificadorPuntaje);
+
 
         //Act
         pregunta.asignarPuntajes(respuestas);
@@ -117,18 +115,15 @@ public class GroupChoiceTest {
     @Test
     public void test03Asigna0PuntosAJugadorQueRespondeConUnaIncorrectaYDosCorrectas() {
         //Arrange
-        List<Opcion> opcionesPregunta = Arrays.asList(opcion1Correcta, opcion2Correcta, opcion3Correcta);
 
-        Pregunta pregunta = new GroupChoice(
+         Pregunta pregunta = new GroupChoice(
                 "Poner las siguientes preguntas en su grupo correspondiente",
-                opcionesPregunta,
+                opcionesCorrectas,
                 clasica,
                 "Animales"
         );
-        Respuesta respuesta1 = jugador1.responder(Arrays.asList(opcion1Correcta,opcion2Incorrecta,opcion3Correcta), opcionesPregunta, modificadorPuntaje);
-
-        List<Respuesta> respuestas = new ArrayList<>();
-        respuestas.add(respuesta1);
+        GruposMock opcionesJugador = opcionesCorrectas.crearCopiaMock(miembrosGrupo1, List.of("Reja"));
+        respuestas.agregar(opcionesJugador,jugador1, modificadorPuntaje);
 
         //Act
         pregunta.asignarPuntajes(respuestas);
@@ -141,18 +136,17 @@ public class GroupChoiceTest {
     @Test
     public void test04Asigna0PuntosAJugadorQueRespondeConDosCorrectasSiendo3Opciones() {
         //Arrange
-        List<Opcion> opcionesPregunta = Arrays.asList(opcion1Correcta, opcion2Correcta, opcion3Correcta);
 
         Pregunta pregunta = new GroupChoice(
                 "Poner las siguientes preguntas en su grupo correspondiente",
-                opcionesPregunta,
+                opcionesCorrectas,
                 clasica,
                 "Animales"
         );
-        Respuesta respuesta1 = jugador1.responder(Arrays.asList(opcion1Correcta,opcion2Correcta), opcionesPregunta, modificadorPuntaje);
 
-        List<Respuesta> respuestas = new ArrayList<>();
-        respuestas.add(respuesta1);
+        GruposMock opcionesJugador = opcionesCorrectas.crearCopiaMock(List.of("Perro"), List.of("Tiburon"));
+        respuestas.agregar(opcionesJugador,jugador1, modificadorPuntaje);
+
 
         //Act
         pregunta.asignarPuntajes(respuestas);
